Renamed UserProfileService.js to software.bytepushers.service.UserProfileService.js

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -63,7 +63,7 @@
     <script src="libs/byte-pushers/software.bytepushers.models.Message.js"></script>
     <script src="js/angular/app.js"></script>
     <script src="js/angular/services/EventService.js"></script>
-    <script src="js/angular/services/UserProfileService.js"></script>
+    <script src="js/angular/services/software.bytepushers.service.UserProfileService.js"></script>
     <script src="js/angular/services/SearchService.js"></script>
     <script src="js/angular/directives/equals.js"></script>
     <script src="js/angular/directives/requiredAny.js"></script>
