Override the toString() mehtod for models.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,7 +78,7 @@
     <script src="js/models/software.bytepushers.domain.PersonTransformer.js"></script>
     <script src="js/models/software.bytepushers.domain.email.js"></script>
     <script src="js/models/software.bytepushers.domain.phoneNumber.js"></script>
-    <script src="js/models/software.bytepushers.domain.address.js"></script>
+    <script src="js/models/software.bytepushers.domain.Address.js"></script>
     <script src="js/models/software.bytepushers.domain.attendee.js"></script>
     <script src="js/models/software.bytepushers.domain.event.js"></script>
     <script src="js/angular/controllers/homeController.js"></script>
