--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,16 +71,16 @@
     <script src="js/models/software.bytepushers.domain.WebServiceResponse.js"></script>
     <script src="js/models/software.bytepushers.domain.WebServiceResponseStatus.js"></script>
     <script src="js/models/software.bytepushers.domain.WebServicePayload.js"></script>
-    <script src="js/models/software.bytepushers.domain.searchRequest.js"></script>
+    <script src="js/models/software.bytepushers.domain.SearchRequest.js"></script>
     <script src="js/models/software.bytepushers.domain.UserProfile.js"></script>
     <script src="js/models/software.bytepushers.domain.UserProfileTransformer.js"></script>
-    <script src="js/models/software.bytepushers.domain.person.js"></script>
+    <script src="js/models/software.bytepushers.domain.Person.js"></script>
     <script src="js/models/software.bytepushers.domain.PersonTransformer.js"></script>
-    <script src="js/models/software.bytepushers.domain.email.js"></script>
-    <script src="js/models/software.bytepushers.domain.phoneNumber.js"></script>
+    <script src="js/models/software.bytepushers.domain.Email.js"></script>
+    <script src="js/models/software.bytepushers.domain.PhoneNumber.js"></script>
     <script src="js/models/software.bytepushers.domain.Address.js"></script>
-    <script src="js/models/software.bytepushers.domain.attendee.js"></script>
-    <script src="js/models/software.bytepushers.domain.event.js"></script>
+    <script src="js/models/software.bytepushers.domain.Attendee.js"></script>
+    <script src="js/models/software.bytepushers.domain.Event.js"></script>
     <script src="js/angular/controllers/homeController.js"></script>
     <script src="js/angular/controllers/software.bytepushers.controller.UsersProfileController.js"></script>
     <script src="js/angular/controllers/software.bytepushers.controller.MyFamilyController.js"></script>
