I have updated my ProtectedMetaData methods for PhoneNumber, Address, and Person.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,6 +74,7 @@
     <script src="js/models/software.bytepushers.domain.SearchRequest.js"></script>
     <script src="js/models/software.bytepushers.domain.UserProfile.js"></script>
     <script src="js/models/software.bytepushers.domain.UserProfileTransformer.js"></script>
+    <script src="js/models/software.bytepushers.domain.ProtectedMetaData.js"></script>
     <script src="js/models/software.bytepushers.domain.Person.js"></script>
     <script src="js/models/software.bytepushers.domain.PersonTransformer.js"></script>
     <script src="js/models/software.bytepushers.domain.Email.js"></script>
