I have updated my app.js, personSearchController, personSearchService, and familySearch.ng.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,17 +40,13 @@
 
     </div>
 
-    <div id="footer-container" class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">Footer</div>
-        </div>
-    </div>
 
     <script src="libs/angularjs/1.2/angular.min.js"></script>
     <script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
     <script src="libs/angularjs/1.2/angular-resource.min.js"></script>
-    <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
     <script src="libs/byte-pushers/com.bytepushers.Application.js"></script>
+    <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
+    <script src="libs/byte-pushers/com.bytepushers.exceptions.Errors.js"></script>
     <script src="libs/byte-pushers/software.bytepushers.models.Message.js"></script>
     <script src="libs/byte-pushers/com.bytepushers.models.Response.js"></script>
     <script src="libs/byte-pushers/com.bytepushers.models.ResponseException.js"></script>
@@ -65,6 +61,7 @@
     <script src="js/angular/app.js"></script>
     <script src="js/angular/services/EventService.js"></script>
     <script src="js/angular/services/software.bytepushers.service.UserProfileService.js"></script>
+    <script src="js/angular/services/software.bytepushers.service.PersonSearchService.js"></script>
     <script src="js/angular/services/SearchService.js"></script>
     <script src="js/angular/directives/equals.js"></script>
     <script src="js/angular/directives/requiredAny.js"></script>
@@ -76,6 +73,7 @@
     <script src="js/models/software.bytepushers.domain.UserProfileTransformer.js"></script>
     <script src="js/models/software.bytepushers.domain.ProtectedMetaData.js"></script>
     <script src="js/models/software.bytepushers.domain.Person.js"></script>
+    <script src="js/models/software.bytepushers.domain.PersonsTransformer.js"></script>
     <script src="js/models/software.bytepushers.domain.PersonTransformer.js"></script>
     <script src="js/models/software.bytepushers.domain.Email.js"></script>
     <script src="js/models/software.bytepushers.domain.PhoneNumber.js"></script>
@@ -85,6 +83,7 @@
     <script src="js/angular/controllers/homeController.js"></script>
     <script src="js/angular/controllers/software.bytepushers.controller.UsersProfileController.js"></script>
     <script src="js/angular/controllers/software.bytepushers.controller.MyFamilyController.js"></script>
+    <script src="js/angular/controllers/software.bytepushers.controller.PersonSearchController.js"></script>
     <script src="js/angular/controllers/userCreatedController.js"></script>
     <script src="js/angular/controllers/eventFormController.js"></script>
     <script src="js/angular/controllers/eventOverviewController.js"></script>
