--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Test file</title>
 </head>
 <body>
-
+<p> hi my name is kenneth flowers</p>
 </body>
 </html>
